--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.3",
+    "@react-email/components": "^0.0.14",
+    "axios": "^1.6.7",
     "firebase": "^10.7.1",
     "lucide-react": "^0.309.0",
     "next": "^14.0.4",
