--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.3",
-    "@react-email/components": "^0.0.14",
+    "@react-email/components": "0.0.14",
     "axios": "^1.6.7",
     "firebase": "^10.7.1",
     "lucide-react": "^0.309.0",
     "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "2.0.0",
     "resend": "^3.1.0"
   },
   "devDependencies": {
